finish with local moving to remote

--- a/Data Clean and Extraction/meta_dataekstraction.ipynb
+++ b/Data Clean and Extraction/meta_dataekstraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,98 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 89.01it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/media/nmhlog/Naufal Disk/Dataset/T_315500_233500_NE_T_315500_234000_SE/meta_data.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# for i in tqdm.tqdm(glob.glob(\"/media/nmhlog/Naufal Disk/Dataset/T_315500_233500_NE_T_315500_234000_SE/**.json\")):\n",
-    "#     print(i)\n",
-    "#     shutil.copyfile(i, \"/\".join(i.split(\"/\")[4:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 38038/38038 [1:02:02<00:00, 10.22it/s] \n"
-     ]
-    }
-   ],
-   "source": [
-    "# for i in tqdm.tqdm(glob.glob(\"/media/nmhlog/Naufal Disk/Dataset/**/**.txt\")):\n",
-    "#     shutil.copyfile(i, \"/\".join(i.split(\"/\")[4:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 13/13 [00:00<00:00, 57.89it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# for i in tqdm.tqdm(glob.glob(\"/media/nmhlog/Naufal Disk/Dataset/**/**.json\")):\n",
-    "#     shutil.copyfile(i, \"/\".join(i.split(\"/\")[4:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 89.83it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# for i in tqdm.tqdm(glob.glob(\"/media/nmhlog/Naufal Disk/Dataset/T_316000_233500_NE_T_316000_233500_SW/**.txt\")):\n",
-    "#     shutil.copyfile(i, \"/\".join(i.split(\"/\")[4:]))\n",
-    "# for i in tqdm.tqdm(glob.glob(\"/media/nmhlog/Naufal Disk/Dataset/T_316000_233500_NE_T_316000_233500_SW/**.json\")):\n",
-    "#     shutil.copyfile(i, \"/\".join(i.split(\"/\")[4:]))\n",
-    "# for i in glob.glob(f\"{PATH}/**/b**.txt\"):\n",
-    "#     os.remove(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,6 +51,26 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Dataset/T_316000_233500_NE_T_316000_233500_SW/meta_data.json']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "METADATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "folder_name = [i.split(\"/\")[1] for i in glob.glob(f\"{PATH}/**/\")]\n",
@@ -150,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,64 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Dataset/T_315500_234500_SW/meta_data.json',\n",
-       " 'Dataset/T_316000_233500_NE_T_316000_233500_SW/meta_data.json',\n",
-       " 'Dataset/T_316000_233500_NW/meta_data.json',\n",
-       " 'Dataset/T_316000_233500_SE/meta_data.json',\n",
-       " 'Dataset/T_316000_234000_NE/meta_data.json',\n",
-       " 'Dataset/T_316000_234000_NW/meta_data.json',\n",
-       " 'Dataset/T_316000_234000_SE/meta_data.json',\n",
-       " 'Dataset/T_316000_234000_SW/meta_data.json',\n",
-       " 'Dataset/T_316500_234000_SW_T_316500_233500_NW/meta_data.json']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "METADATA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "METADATA = METADATA[5:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[   0    1    2 ... 1600 1601 1602]\n",
-      "[   0    1    2 ... 3038 3039 3040]\n",
-      "[   0    1    2 ... 2656 2657 2658]\n",
-      "[   0    1    2 ... 1397 1398 1399]\n",
-      "[   0    1    2 ... 4098 4099 4100]\n",
-      "[   0    1    2 ... 2544 2545 2546]\n",
-      "[   0    1    2 ... 1693 1694 1695]\n",
-      "[   0    1    2 ... 3741 3742 3743]\n",
-      "[   0    1    2 ... 2904 2905 2906]\n",
-      "[   0    1    2 ... 2907 2908 2909]\n",
-      "[   0    1    2 ... 2734 2735 2736]\n"
-     ]
-    }
-   ],
    "source": [
     "b_data = [i.split(\"/\")[1] for i in METADATA]\n",
     "for b_d in b_data :\n",
@@ -291,14 +165,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [00:01<00:00, 12.71it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00,  7.07it/s]\n"
      ]
     }
    ],
@@ -396,21 +270,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "MAPTOINST_META_LIST= glob.glob(\"map_**\")\n",
+    "print(MAPTOINST_META_LIST)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13/13 [42:57<00:00, 198.25s/it]\n"
+      "100%|██████████| 1/1 [04:59<00:00, 299.99s/it]\n"
      ]
     }
    ],
    "source": [
     "MAPTOINST_META_LIST= glob.glob(\"map_**\")\n",
     "def get_combining_building_data(map_data_json = MAPTOINST_META_LIST,buff_folder=\"Dataset\") :   \n",
-    "    for i,meta_name in tqdm.tqdm(enumerate(map_data_json),total=13):\n",
+    "    for i,meta_name in tqdm.tqdm(enumerate(map_data_json),total=len(map_data_json)):\n",
     "        map_data = read_meta_data(map_data_json[i])[\"building\"]\n",
     "        buff_folder = f\"all_data_building/{map_data_json[i][8:-5]}\"\n",
     "        os.makedirs(buff_folder,exist_ok=True)\n",
@@ -426,7 +318,7 @@
     "                except :\n",
     "                    buff = np.loadtxt(f\"Dataset/{list_data_txt[idx]}\")[:6]\n",
     "                    all_data = np.append(all_data,[buff],axis=0)\n",
-    "            del_data(list_data_txt)\n",
+    "            # del_data(list_data_txt)\n",
     "            if \"T_316000_233500_NE_T_316000_233500_SW\" in meta_name:\n",
     "                data_building_index = np.where(all_data[:,0]<318000)\n",
     "                data_bulding_sub_building_index = np.where(all_data[:,0]>318000)\n",
@@ -434,133 +326,17 @@
     "                data_bulding_sub_building = all_data[data_bulding_sub_building_index]\n",
     "                data_bulding_sub_building[:,0] = data_bulding_sub_building[:,0]-2000\n",
     "                data_bulding_sub_building[:,1] = data_bulding_sub_building[:,1]-3619\n",
-    "                data_bulding_sub_building[:,2] = data_bulding_sub_building[:,2]+40\n",
+    "                data_bulding_sub_building[:,2] = data_bulding_sub_building[:,2]+37.4\n",
     "                all_data = np.append(data_building,data_bulding_sub_building,axis=0)\n",
     "            save_txt_loc = f\"{buff_folder}/building_{mdi}.txt\"\n",
     "            map_data[mdi][\"path\"] = save_txt_loc\n",
     "            np.savetxt(save_txt_loc,all_data,fmt='%.8f %.8f %.8f %d %d %d')\n",
+    "            # break\n",
     "        old_map = read_meta_data(map_data_json[i])\n",
     "        old_map[\"building\"]= map_data\n",
     "        save_meta_data(f\"{map_data_json[i][8:-5]}\",old_map)\n",
     "        os.remove(f\"{map_data_json[i]}\")\n",
     "get_combining_building_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "np.savetxt(\"all_data_building/T_315500_234500_SW/building_065.txt\",all_data,fmt='%.8f %.8f %.8f %d %d %d')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset/T_315500_234500_SW/building_66_roof_01.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_01.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_02.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_03.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_04.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_05.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_06.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_07.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_08.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_09.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_10.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_11.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_12.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_13.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_14.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_15.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_16.txt\n",
-      "Dataset/T_315500_234500_SW/building_66_window_17.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "# list_data_txt = map_data[mdi][\"path\"]\n",
-    "data = glob.glob(\"Dataset/T_315500_234500_SW/b**\")\n",
-    "all_data = np.loadtxt(data[0])[:,:6]\n",
-    "\n",
-    "for i in data[1:]:\n",
-    "    # for idx in range(1,len(list_data_txt)):\n",
-    "    print(i)\n",
-    "    # try:\n",
-    "    buff = np.loadtxt(i)[:,:6]\n",
-    "    all_data = np.append(all_data,buff,axis=0)\n",
-    "    # except :\n",
-    "    #     buff = np.loadtxt(i)[:6]\n",
-    "    #     all_data = np.append(all_data,[buff],axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50250"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(all_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "40451"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(np.loadtxt(\"Dataset/T_315500_234500_SW/building_66_roof_01.txt\")[:,:6])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Dataset/T_315500_234500_SW/building_66_window_17.txt'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "i"
    ]
   },
   {
